--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                
             </select>
             <br><br>
-            <button onclick="Salvar()">Salvar</button>
+            <button  id="" onclick="Salvar()">Salvar</button>
         </fieldset>
     </form>
     <br><br>
