--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                
             </select>
             <br><br>
-            <button  id="" onclick="Salvar()">Salvar</button>
+            <button  onclick="Salvar()">Salvar</button>
         </fieldset>
     </form>
     <br><br>
@@ -88,6 +88,20 @@
                 <th>Número</th>
                 <th>Cidade</th>
                 <th>Estado</th>
+            </tr>
+        </thead>
+        <thead>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr>
         </thead>
     </table>
