--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
     <title>Formulario</title>
 </head>
 
@@ -71,10 +70,10 @@
             </select>
             <br><br>
             <button  onclick="Salvar()">Salvar</button>
-        </fieldset>
-    </form>
-    <br><br>
-
+    
+</fieldset>
+</form>
+<br><br>
     <table id="linha" border="1">
         <thead>
             <tr>
@@ -92,7 +91,7 @@
         </thead>
         <thead>
             <tr>
-                <td></td>
+                <td id="cliente"></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -105,6 +104,7 @@
             </tr>
         </thead>
     </table>
+    
 
     <script src="app.js"></script>
 </body>
