--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <input type="text" name="cidade" id="cidade">
 
             <label for="cEst"> Estado:</label>
-            <select name="tEst" id="tEst">
+            <select name="Est" id="Est">
                 <OPtgroup label="Região Sudeste">
                     <option value="RJ">Rio de Janariro</option>
                     <option value="SP" selected>São Paulo</option>
