--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
             <br><br>
 
             <label for="date">Data de Nascimento:</label>
-            <input type="date" name="data" id="data">
+            <input type="date" name="date" id="date ">
 
             <br><br>
             <label for="text">Endereço:</label>
             <input type="text" name="endereco" id="endereco">
 
             <label for="number">Número:</label>
-            <input type="namber" name="tNum" id="tNum">
+            <input type="number" name="tNum" id="tNum">
 
             <br><br>
 
             <label for="text">Cidade:</label>
             <input type="text" name="cidade" id="cidade">
 
-            <label for="cEst"> Estado:</label>
+            <label for="Est"> Estado:</label>
             <select name="Est" id="Est">
                 <OPtgroup label="Região Sudeste">
                     <option value="RJ">Rio de Janariro</option>
@@ -90,8 +90,8 @@
             </tr>
         </thead>
         <thead>
-            <tr>
-                <td id="cliente"></td>
+            <tr id="cliente">
+                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
