--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <br><br>
 
             <label for="date">Data de Nascimento:</label>
-            <input type="date" name="date" id="date ">
+            <input type="date" name="date" id="date">
 
             <br><br>
             <label for="text">Endereço:</label>
@@ -69,7 +69,7 @@
 
             </select>
             <br><br>
-            <button onclick="Salvar()">Salvar</button>
+            <button type="button" onclick="Salvar()">Salvar</button>
 
         </fieldset>
     </form>
@@ -89,19 +89,8 @@
                 <th>Estado</th>
             </tr>
         </thead>
-        <thead>
-            <tr id="cliente">
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
+        <tbody  id="cliente">
+          
         </thead>
     </table>
 
