--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
             <label for="firstname">Nome:</label>
             <input type="text" name="nome" id="nome">
             <label for="lastname">Sobrenome:</label>
-            <input type="text" name="sobrenome" id="sobrenome" required>
+            <input type="text" name="sobrenome" id="sobrenome">
 
             <br><br>
 
             <label for="email">E-mail:</label>
-            <input type="text" name="email" id="email" required>
+            <input type="text" name="email" id="email">
 
             <br><br>
 
             <label for="passowoed">Senha:</label>
-            <input type="password" name="senha" id="senha" required>
+            <input type="password" name="senha" id="senha">
             <label for="Confimepassowoed">Confirme a Senha:</label>
-            <input type="password" name="confirmesenha" id="confirmesenha" required>
+            <input type="password" name="confirmesenha" id="confirmesenha">
 
             <br><br>
 
